Add Polish strings for commits #1219,#1169,#1031
feat: Auto Page Turn for Epub Reader (#1219)
fix: clarity issue with ambiguous string SET (#1169)
feat: slim footnotes support (#1031)

--- a/lib/I18n/translations/polish.yaml
+++ b/lib/I18n/translations/polish.yaml
@@ -330,4 +330,9 @@ STR_UPLOAD: "Wyślij"
 STR_BOOK_S_STYLE: "Styl książki"
 STR_EMBEDDED_STYLE: "Style wbudowane w EPUB"
 STR_OPDS_SERVER_URL: "URL serwera OPDS"
+STR_FOOTNOTES: "Przypisy"
+STR_NO_FOOTNOTES: "Brak przypisów na tej stronie"
+STR_LINK: "[link]"
 STR_SCREENSHOT_BUTTON: "Zrób zrzut ekranu"
+STR_AUTO_TURN_ENABLED: "Auto-kartkowanie: "
+STR_AUTO_TURN_PAGES_PER_MIN: "Auto-kartkowanie (str./min)"
